# Notion-Webhooks

./: README.md  download-dependencies.sh  pyproject.toml
.github/workflows/: cd.yml  ci.yml  cicd.yml
cdk/: .gitignore  package-lock.json
cdk/lib/: cdk-stack.ts
docs/: design.md
src/: README.md
src/monitoring/: lambda_handler.py
src/notion_automation_trigger/: __init__.py
src/orchestration/: lambda_handler.py
src/webhooks/: lambda_handler.py
tests/monitoring/: test_monitoring.py
tests/orchestration/: test_orchestration.py
tests/webhooks/: test_webhooks.py
tools/: common.py  initial_register.py  manage_database_id.py
