[project]
name = "notion-automation-trigger"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "zaki3mymy", email = "zaki.last@gmail.com" }
]
dependencies = [
    "flake8>=5.0.4",
    "isort>=5.13.2",
    "black>=23.12.1",
    "pytest>=7.4.4",
    "boto3>=1.34.13",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "moto>=4.2.12",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/notion_automation_trigger"]
