[project]
name = "notion-webhooks"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "zaki3mymy", email = "zaki.last@gmail.com" }
]
dependencies = [
    "boto3>=1.34.13",
    "deepdiff>=6.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "moto>=4.2.12",
    "pytest-mock>=3.12.0",
    "freezegun>=1.4.0",
    "deepdiff>=6.7.1",
    "flake8>=5.0.4",
    "isort>=5.13.2",
    "black>=23.12.1",
    "pytest>=7.4.4",
]

[tool.hatch.metadata]
allow-direct-references = true
