[project]
name = "notion-webhooks"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "zaki3mymy", email = "zaki.last@gmail.com" }
]
dependencies = [
    "boto3>=1.34.13",
    "deepdiff>=6.7.1",
    "aws_lambda_powertools>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "moto>=4.2.12",
    "pytest-mock>=3.12.0",
    "freezegun>=1.4.0",
    "deepdiff>=6.7.1",
    "flake8>=5.0.4",
    "isort>=5.13.2",
    "black>=23.12.1",
    "pytest>=7.4.4",
    "questionary>=2.0.1",
    "pytest-cov>=4.1.0",
    "pytest-parallel>=0.1.1",
    "py>=1.11.0",
    "tqdm>=4.66.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/notion_webhooks"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests",]
addopts = "--workers=auto --cov=src --cov-branch --cov-report=term --cov-report=html"
